--- a/config/i3/config
+++ b/config/i3/config
@@ -46,7 +46,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id /home/stefan/.nix-profile/bin/xss-lock --transfer-sleep-lock -- /home/stefan/.nix-profile/bin/i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -70,6 +70,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec /home/stefan/.nix-profile/bin/alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -86,8 +87,8 @@ bindsym $mod+k focus up; exec $movemouse
 bindsym $mod+l focus right; exec $movemouse
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Levt focus left; exec $movemouse
-bindsym $mod+down focus down; exec $movemouse
+bindsym $mod+Left focus left; exec $movemouse
+bindsym $mod+Down focus down; exec $movemouse
 bindsym $mod+Up focus up; exec $movemouse
 bindsym $mod+Right focus right; exec $movemouse
 
@@ -253,14 +254,11 @@ for_window [class="Blueman-manager"] floating enable
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
 
-
-
-
 # load xrdb theme ftom ~/.config/xtheme/*
 exec_always --no-startup-id $XDG_CONFIG_HOME/xtheme.init
 
 # polybar
-exec_always --no-startup-id $XDG_CONFIG_HOME/polybar/run.sh
+# exec_always --no-startup-id $XDG_CONFIG_HOME/polybar/run.sh
 
 #############################
 ### settings for i3-gaps: ###
