--- a/config/ssh/github.config
+++ b/config/ssh/github.config
@@ -1,5 +1,5 @@
-Host github.com
-    HostName github.com
-    User git
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_rsa
+# Host github.com
+#     HostName github.com
+#     User git
+#     PreferredAuthentications publickey
+#     IdentityFile ~/.ssh/id_rsa
