--- a/config/ssh/proxmox.config
+++ b/config/ssh/proxmox.config
@@ -14,9 +14,6 @@ Host nest nest.leah.proxmox.com
   ForwardAgent yes
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
-  # PermitLocalCommand yes
-  # LocalCommand scp /home/slendl/.config/dotfiles/config/ssh/.bashrc.root nest:/.bashrc
-
 
 Host nest2 nest2.leah.proxmox.com
   HostName 192.168.23.162
@@ -32,6 +29,19 @@ Host nest3 nest3.leah.proxmox.com
 
 Host nest4 nest4.leah.proxmox.com
   HostName 192.168.23.164
+  ForwardAgent yes
+  User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+Host nest9 nest9.leah.proxmox.com
+  HostName 192.168.23.169
+  ForwardAgent yes
+  User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+
+Host router router.leah.proxmox.com
+  HostName 192.168.23.190
   ForwardAgent yes
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
