ssh config proxmox

--- a/config/ssh/proxmox.config
+++ b/config/ssh/proxmox.config
@@ -39,9 +39,16 @@ Host nest9 nest9.leah.proxmox.com
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
 
-
 Host router router.leah.proxmox.com
   HostName 192.168.23.190
   ForwardAgent yes
   User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+Host proxdev
+  HostName proxdev.maurer-it.com
+  User gitolite3
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+Host git.proxmox.com
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
