--- a/config/ssh/contabo.config
+++ b/config/ssh/contabo.config
@@ -5,8 +5,8 @@ Host specht specht.stfl.dev
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519
 
-Host fink fink.stfl.dev
-  HostName fink.stfl.dev
+Host elster elster.stfl.dev
+  HostName elster.stfl.dev
   # HostName 38.242.247.145
   ForwardAgent yes
   User root
