--- a/config/ssh/proxmox.config
+++ b/config/ssh/proxmox.config
@@ -33,6 +33,8 @@ Host nest4 nest4.leah.proxmox.com
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
 
+
+
 Host nest9 nest9.leah.proxmox.com
   HostName 192.168.23.169
   ForwardAgent yes
@@ -44,6 +46,28 @@ Host router router.leah.proxmox.com
   ForwardAgent yes
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+
+
+Host ceph1 ceph1.leah.proxmox.com
+  HostName 192.168.23.165
+  ForwardAgent yes
+  User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+Host ceph2 ceph2.leah.proxmox.com
+  HostName 192.168.23.166
+  ForwardAgent yes
+  User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+Host ceph3 ceph3.leah.proxmox.com
+  HostName 192.168.23.167
+  ForwardAgent yes
+  User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+
 
 Host proxdev
   HostName proxdev.maurer-it.com
