--- a/config/ssh/proxmox.config
+++ b/config/ssh/proxmox.config
@@ -34,7 +34,6 @@ Host nest4 nest4.leah.proxmox.com
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
 
 
-
 Host nest9 nest9.leah.proxmox.com
   HostName 192.168.23.169
   ForwardAgent yes
@@ -63,6 +62,12 @@ Host ceph2 ceph2.leah.proxmox.com
 
 Host ceph3 ceph3.leah.proxmox.com
   HostName 192.168.23.167
+  ForwardAgent yes
+  User root
+  IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
+
+Host ceph4 ceph4.leah.proxmox.com
+  HostName 192.168.23.168
   ForwardAgent yes
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
