ssh: update pulswerk ssh configs

--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -4,7 +4,6 @@ host web7
     user pulswerk
     hostname 192.168.22.7
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
 host web7.ext
@@ -12,33 +11,33 @@ host web7.ext
     hostname 192.168.22.7
     ProxyJump server3.ext
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
+
+host web03.pulswerk.at web03 web3
+    user lendl
+    hostname web03.pulswerk.at
+    PreferredAuthentications publickey
+    ForwardAgent no
 
 host server3 server
     user pulswerk
     hostname 192.168.22.3
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
 host server3.ext
     user pulswerk
     hostname 81.223.69.142
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
 host ecology.at
     user pulswerk
     hostname ecology.at
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
-    ForwardAgent yes
+    ForwardAgent no
 
-host ckan.wien.pulswerk.at
+host dokku.pulswerk.at
     user root
-    hostname ckan.wien.pulswerk.at
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
-    ForwardAgent yes
+    ForwardAgent no
