--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -11,13 +11,14 @@ host web7.ext
     hostname 192.168.22.7
     ProxyJump server3.ext
     PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
 host web03.pulswerk.at web03 web3
     user lendl
     hostname web03.pulswerk.at
     PreferredAuthentications publickey
-    ForwardAgent no
+    ForwardAgent yes
 
 host server3 server
     user pulswerk
@@ -29,12 +30,14 @@ host server3.ext
     user pulswerk
     hostname 81.223.69.142
     PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
 host ecology.at
     user pulswerk
     hostname ecology.at
     PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent no
 
 host dokku.pulswerk.at
