ssh: add ssh-config mode hint

--- a/config/ssh/proxmox.config
+++ b/config/ssh/proxmox.config
@@ -1,3 +1,5 @@
+# -*- mode: ssh-config -*-
+
 # TODO unfortunatly i couldn't get this to work.. couldnt resolve nest.leah.proxmox.com even though it's defined here as well as /etc/hosts
 # CanonicalizeHostname yes
 # CanonicalDomains leah.proxmox.com proxmox.com
@@ -71,7 +73,6 @@ Host ceph4 ceph4.leah.proxmox.com
   ForwardAgent yes
   User root
   IdentityFile /home/slendl/.ssh/id_ed25519_proxmox_leah
-
 
 
 Host proxdev
