ssh: pulswerk config

--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -1,47 +1,43 @@
 # -*- mode: ssh-config -*-
 # vi: ft=sshconfig
 
-host web7
-    user pulswerk
-    hostname 192.168.22.7
+host wien.pulswerk.at
+    user root
+    hostname wien.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
 
-host web7.ext
-    user pulswerk
-    hostname 192.168.22.7
-    ProxyJump server3.ext
+host web7.pulswerk.local
+    user root
+    hostname web7
+    ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
-host web03.pulswerk.at web03 web3
+host dokku.pulswerk.local
+    user root
+    # hostname 192.168.22.7
+    hostname dokku.pulswerk.local
+    ProxyJump wien.pulswerk.at
+    PreferredAuthentications publickey
+    ForwardAgent yes
+
+host web.pulswerk.local
+    user root
+    hostname 192.168.22.20
+    ProxyJump wien.pulswerk.at
+    PreferredAuthentications publickey
+    ForwardAgent yes
+
+host web03.pulswerk.at
     user lendl
     hostname web03.pulswerk.at
     PreferredAuthentications publickey
-    ForwardAgent yes
-
-host server3 server
-    user pulswerk
-    hostname 192.168.22.3
-    PreferredAuthentications publickey
-    ForwardAgent yes
-
-host server3.ext
-    user pulswerk
-    hostname 81.223.69.142
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent yes
 
 host ecology.at
     user pulswerk
     hostname ecology.at
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ecdsa_manjaro
-    ForwardAgent no
-
-host dokku.pulswerk.at
-    user root
-    PreferredAuthentications publickey
+    # IdentityFile ~/.ssh/id_ecdsa_manjaro
     ForwardAgent no
