--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -10,13 +10,14 @@ host wien.pulswerk.at
 host web7.pulswerk.local
     user root
     hostname web7
+    # hostname 192.168.22.7
     ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
 
 host dokku.pulswerk.local
     user root
-    # hostname 192.168.22.7
+    # hostname 192.168.22.21
     hostname dokku.pulswerk.local
     ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
@@ -24,7 +25,8 @@ host dokku.pulswerk.local
 
 host web.pulswerk.local
     user root
-    hostname 192.168.22.20
+    # hostname 192.168.22.20
+    hostname web.pulswerk.local
     ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
