ssh: remove ProxyJump for pulswerk ssh config

--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -1,25 +1,25 @@
 # -*- mode: ssh-config -*-
 # vi: ft=sshconfig
 
-host wien.pulswerk.at
-    user root
-    hostname wien.pulswerk.at
-    PreferredAuthentications publickey
-    ForwardAgent yes
+# host wien.pulswerk.at
+#     user root
+#     hostname wien.pulswerk.at
+#     PreferredAuthentications publickey
+#     ForwardAgent yes
 
 host web7.pulswerk.local
     user root
     hostname web7
     # hostname 192.168.22.7
-    ProxyJump wien.pulswerk.at
+    # ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
 
 host dokku.pulswerk.local
     user root
     # hostname 192.168.22.21
-    hostname dokku.pulswerk.local
-    ProxyJump wien.pulswerk.at
+    # hostname dokku.pulswerk.local
+    # ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
 
@@ -27,7 +27,7 @@ host web.pulswerk.local
     user root
     # hostname 192.168.22.20
     hostname web.pulswerk.local
-    ProxyJump wien.pulswerk.at
+    # ProxyJump wien.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
 
