ssh: default to proxy jump for pulswerk hosts

--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -36,6 +36,7 @@ host web03.pulswerk.at
     hostname web03.pulswerk.at
     PreferredAuthentications publickey
     ForwardAgent yes
+    ProxyJump dokku.pulswerk.local
 
 host ecology.at
     user pulswerk
