pulswerk: new ssh config

--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -1,46 +1,22 @@
 # -*- mode: ssh-config -*-
 # vi: ft=sshconfig
 
-# host wien.pulswerk.at
-#     user root
-#     hostname wien.pulswerk.at
-#     PreferredAuthentications publickey
-#     ForwardAgent yes
-
-host web7.pulswerk.local
-    user root
-    hostname web7
-    # hostname 192.168.22.7
-    # ProxyJump wien.pulswerk.at
+Host dokku.pulswerk.local
+    Hostname wien.pulswerk.at  # port forwarded to dokku.pulswerk.local server
+    User root
+    Port 2222
     PreferredAuthentications publickey
     ForwardAgent yes
 
-host dokku.pulswerk.local
-    user root
-    # hostname 192.168.22.21
-    # hostname dokku.pulswerk.local
-    # ProxyJump wien.pulswerk.at
-    PreferredAuthentications publickey
-    ForwardAgent yes
-
-host web.pulswerk.local
-    user root
-    # hostname 192.168.22.20
-    hostname web.pulswerk.local
-    # ProxyJump wien.pulswerk.at
+Host web.pulswerk.local
+    User root
+    ProxyJump dokku.pulswerk.local
     PreferredAuthentications publickey
     ForwardAgent yes
 
 host web03.pulswerk.at
-    user lendl
-    hostname web03.pulswerk.at
+    Hostname web03.pulswerk.at
+    User lendl
+    ProxyJump dokku.pulswerk.local
     PreferredAuthentications publickey
     ForwardAgent yes
-    ProxyJump dokku.pulswerk.local
-
-host ecology.at
-    user pulswerk
-    hostname ecology.at
-    PreferredAuthentications publickey
-    # IdentityFile ~/.ssh/id_ecdsa_manjaro
-    ForwardAgent no
