pulswerk ssh config

--- a/config/ssh/pulswerk.config
+++ b/config/ssh/pulswerk.config
@@ -1,22 +1,26 @@
 # -*- mode: ssh-config -*-
 # vi: ft=sshconfig
 
+Host wien.pulswerk.at
+  # port forwarded to dokku.pulswerk.local server
+  User root
+  Port 2222
+  PreferredAuthentications publickey
+  ForwardAgent yes
+
 Host dokku.pulswerk.local
-    Hostname wien.pulswerk.at  # port forwarded to dokku.pulswerk.local server
-    User root
-    Port 2222
-    PreferredAuthentications publickey
-    ForwardAgent yes
+  User root
+  PreferredAuthentications publickey
+  ForwardAgent yes
 
 Host web.pulswerk.local
-    User root
-    ProxyJump dokku.pulswerk.local
-    PreferredAuthentications publickey
-    ForwardAgent yes
+  User root
+  PreferredAuthentications publickey
+  ForwardAgent yes
 
 host web03.pulswerk.at
-    Hostname web03.pulswerk.at
-    User lendl
-    ProxyJump dokku.pulswerk.local
-    PreferredAuthentications publickey
-    ForwardAgent yes
+  Hostname web03.pulswerk.at
+  User lendl
+  ProxyJump dokku.pulswerk.local
+  PreferredAuthentications publickey
+  ForwardAgent yes
