--- a/config/ssh/hei.config
+++ b/config/ssh/hei.config
@@ -3,10 +3,10 @@
 
 host hei-dev001.hei.local
     user dobner
-    PreferredAuthentications publickey
+    # PreferredAuthentications publickey
     ForwardAgent yes
 
 host heiv001.hei.local
     user root
-    PreferredAuthentications publickey
+    # PreferredAuthentications publickey
     ForwardAgent yes
